--- a/MessageBoard/MessageBoard/appsettings.json
+++ b/MessageBoard/MessageBoard/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebConfig": {
+    "PageSize": 10,
+    "PageCountAndCurrentLocationFormat": "{0} / {1}"
+  }
 }
