--- a/MessageBoard/MessageBoard/MessageBoard.csproj
+++ b/MessageBoard/MessageBoard/MessageBoard.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="NLog" Version="4.7.8" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.11.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.0.7" />
   </ItemGroup>
 
 </Project>
