--- a/MessageBoard/MessageBoard/appsettings.json
+++ b/MessageBoard/MessageBoard/appsettings.json
@@ -11,7 +11,9 @@
   },
   "AllowedHosts": "*",
   "WebConfig": {
-    "PageSize": 10,
-    "PageCountAndCurrentLocationFormat": "{0} / {1}"
+    "Pagination": {
+      "PageSize": 10,
+      "PageCountAndCurrentLocationFormat": "{0} / {1}"
+    }
   }
 }
