--- a/MessageBoard/MessageBoard/appsettings.json
+++ b/MessageBoard/MessageBoard/appsettings.json
@@ -14,6 +14,14 @@
     "Pagination": {
       "PageSize": 10,
       "PageCountAndCurrentLocationFormat": "{0} / {1}"
+    },
+    "MailServer": {
+      "Server": "localhost",
+      "Port": 1025,
+      "SenderName": "Admin",
+      "SenderEmail": "Admin@gmail.com",
+      "Account": "",
+      "Password": ""
     }
   }
 }
