使用JWT進行頁面登入

--- a/MessageBoard/MessageBoard/appsettings.json
+++ b/MessageBoard/MessageBoard/appsettings.json
@@ -22,6 +22,11 @@
       "SenderEmail": "Admin@gmail.com",
       "Account": "",
       "Password": ""
+    },
+    "Jwt": {
+      "SecretKey": "ABCDEFGHIJKLMNOP", // 長度最少要16字元
+      "ExpireMinutes": 30,
+      "CookieName": "_MVCTutor"
     }
   }
 }
