日期與狀態訊息顯示調整

--- a/MessageBoard/MessageBoard/appsettings.json
+++ b/MessageBoard/MessageBoard/appsettings.json
@@ -27,6 +27,11 @@
       "SecretKey": "ABCDEFGHIJKLMNOP", // 長度最少要16字元
       "ExpireMinutes": 30,
       "CookieName": "_MVCTutor"
+    },
+    "DateTimeFormat": {
+      "DateTime": "yyyy/MM/dd HH:mm:ss",
+      "Date": "yyyy/MM/dd",
+      "Time": "HH:mm:ss"
     }
   }
 }
